# CGI-P1

./: CMakeLists.txt  Paths_D.txt  README.md  main.cpp
dataset/: france-01.txt  spain-01.txt  uk-01.txt
lib/: Point.cpp  Point.h  RGB.cpp  RGB.h  Reader.cpp  Reader.h  SpaceVector.cpp  SpaceVector.h  Wanderer.cpp  Wanderer.h  Window.cpp  Window.h
